Hosting recording elsewhere; adding screenshots

--- a/README.org
+++ b/README.org
@@ -1,4 +1,9 @@
-TODO: Insert recording here
+* Fishy Merry-Go-Round
+
+
+
+Here's (about) a thousand more:
+
 
 * Dependency Installation
 The aquarium uses Raylib. Compile and install it (as a static library). For the latest information, check https://github.com/raysan5/raylib?tab=readme-ov-file#build-and-installation.
